[project]
name = "merge-tcfc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Achim Stoessl", email = "achim.stoessl@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "polars>=1.9.0",
    "charmingbeauty>=0.1.4",
    "tqdm>=4.66.5",
    "django>=5.1.1",
    "vtk>=9.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/merge_tcfc"]
