[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Achim Stoessl", email = "achim.stoessl@gmail.com" }
]
dependencies = [
    "ipython>=8.27.0",
    "numpy>=2.1.1",
    "pydashi>=0.1.3",
    "hermes-py>=0.2.0",
    "matplotlib>=3.9.2",
    "django>=5.1.1",
    "polars>=1.6.0",
    "charmingbeauty>=0.1.4",
    "jupyter>=1.1.1",
    "pyfonts>=0.0.1",
    "jinja2>=3.1.4",
    "pdfkit>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notebooks"]
